[project]
name = "qapytest"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.12",
]

[tool.ruff]
respect-gitignore = true
exclude = [
    ".idea", ".vscode", ".git", "venv", ".venv", "*.env", "*cache*"
]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "D", "UP", "B", "A", "T20", "PT", "Q", "RET", "SLF", 
    "SIM", "ARG", "PTH", "RUF", "COM", "ANN", "S", "C4", "PIE"
]

ignore = [
    "RUF001", "ANN101", "ANN102", "ANN002", "ANN003", "D203", "D213", "D406", "D407"
]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
